// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`smoking CLI runs a mix of passing and failing cases: stdout 1`] = `
"FOO = tar
✔ pass
✘ fail
  1 | throw new Error("intentional failure")
              ^
error: intentional failure
      at /tmp/smoking-<random>/run.ts:1:11
      at loadAndEvaluateModule (2:1)

Bun v<version> (<platform>)
"
`;

exports[`smoking CLI runs a mix of passing and failing cases: stderr 1`] = `
"1 | throw new Error("intentional failure")
              ^
error: intentional failure
      at /tmp/smoking-<random>/run.ts:1:11
      at loadAndEvaluateModule (2:1)

Bun v<version> (<platform>)
"
`;
